--- a/src/Register/style.css
+++ b/src/Register/style.css
@@ -12,7 +12,7 @@ body {
     2. The same background image URL.
   */
   background: 
-    linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    linear-gradient(rgb(236, 114, 14), rgba(0, 0, 0, 0.5)),
     url('https://cdn.pixabay.com/photo/2016/10/22/21/54/industry-1761801_1280.jpg');
   background-size: cover;
   background-repeat: no-repeat;
@@ -38,6 +38,13 @@ body {
   margin-bottom: 25px;
   color: #333;
 }
+
+.login-container p {
+    margin: 10px 0; /* Add some space between the links */
+    margin-top: 5px;
+    font-size: 0.9rem;
+    text-align: left;
+}
  
 .login-container form {
   display: flex;
@@ -51,6 +58,7 @@ body {
   border: 1px solid #ccc;
   border-radius: 8px;
   font-size: 1rem;
+  background-color: #d5dfd6;
 }
 
 .login-container button {
@@ -78,6 +86,7 @@ body {
 
 .login-container .links p {
   margin: 10px 0;
+  text-align: center;
 }
 
 .login-container .links a {
